--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,3 +60,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Refresh time of main screen  (in seconds)
+index.refresh.interval=300
